# mybudy

./: .gitignore  PROJECT_SUMMARY.md  README.md  float.html  index.html  package.json  vite.config.js
.github/workflows/: build.yml
docs/: BUILD.md  GITHUB_ACTIONS.md  README.md  WINDOWS_INSTALL.md  WINDOWS_TEST.md
scripts/: build.sh  install-windows.bat  monitor_build.sh  push_retry.sh  test.sh
src/: float.js  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: chat.rs  message.rs  mod.rs
src-tauri/src/float_window/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/screen_capture/: mod.rs
src-tauri/src/voice/: mod.rs
src/components/: App.js  ChatArea.js  Sidebar.js  WelcomeScreen.js
src/stores/: chatStore.js  configStore.js
src/styles/: float.css  main.css
